<resources>
    <string name="app_name">Stockbay</string>
    <string name="login">Login:</string>
    <string name="senha">Senha:</string>
    <string name="title_activity_menu_lateral">MenuLateral</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="nav_estoque">Estoque</string>
    <string name="nav_lucros">Lucros</string>
    <string name="nav_gastos" />
    <string name="nav_forn">Fornecedor</string>
    <string name="nav_gasto">Gastos</string>
    <string name="nav_ferramentas">Ferramentas</string>
    <string name="title_activity_menu">menuActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_lucros">Lucros</string>
    <string name="title_estoque">Estoque</string>
    <string name="title_cadastro">Registrar-se</string>
    <string name="btn_login">Login</string>
    <string name="view_embaixologo">Controle de estoque para mini empreendedores</string>
    <string name="btn_registrar">Registrar-se</string>
    <string name="title_mais">Menu</string>
    <string name="btnLogin">Login</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navConfig">Configurações</string>
    <string name="title_activity_princi">PrinciActivity</string>
    <string name="navHome">Inicio</string>
    <string name="navContatos">Contatos</string>
    <string name="navStock">Estoque</string>
    <string name="itemID">ID:</string>
    <string name="ItmeEmAIL">Email:</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="item_ID" />
    <string name="itemid">ID:</string>
    <string name="GG" />
    <string name="Title_Cadastro">Cadastro de Produtos</string>
    <string name="CampoProduto">Nome Produto</string>
    <string name="EditQTD">Quantidade</string>
    <string name="EditdtCompra">Data de Compra</string>
    <string name="EditVLCusto" />
    <string name="EditVlCusT">Valor de Custo</string>
    <string name="EditVLVenda">Valor de Venda</string>
    <string name="EditDescricao">Descrição</string>
    <string name="nav_Voltar">Cancelar</string>
    <string name="nav_Conta">Conta</string>
    <string name="nav_LogOut">Sair</string>
    <string name="nav_agenda">Contatos</string>
    <string name="nav_AdicionarNovoContanct">Adicionar novo Contato</string>
    <string name="NovoContato">Novo Contato</string>
    <string name="nome">Nome</string>
    <string name="Telefone">(11) 0000-0000</string>
    <string name="Novo">Adicionar</string>
    <string name="btnEnviar">Enviar E-mail</string>
    <string name="lblReset">Redefinição de senha</string>
    <string name="TXTDTCompra">Data de compra:</string>
    <string name="TXTQTDE">Quantidade:</string>
    <string name="TXTNOME">Produto:</string>
    <string name="TXTVALUE">Valor:</string>
    <string name="TextSobre">Sobre</string>
    <string name="TEXTVersão">Pré Alva V:1,0,1</string>
    <string name="Temo">Temos do aplicativo</string>
    <string name="nav_password">Alterar senha</string>
    <string name="nav_sair">Sair do App</string>
    <string name="nav_versao">Verssão do App</string>
    <string name="navTermos">Termo de uso</string>
    <string name="avatar">Photo</string>
    <string name="Main">Bem-Vindo ao Stockbay</string>
    <string name="Excluir">Excluir item</string>
    <string name="btnExluir">Excluir produto</string>
    <string name="editEmpresa">Nome da Empresa</string>
    <string name="CamposUID">Codigo (ID)</string>
    <string name="dialog_fire_missiles">String</string>
    <string name="TXTDT">Data de Compra</string>
    <string name="VlCusto">Custo</string>
    <string name="VlVenda">Valor Venda</string>
    <string name="action_config">Configuração</string>
    <string name="nav_conta">Conta</string>
    <string name="nav_share">Compartilhar</string>
    <string name="btnler">Escanear código de barra</string>
    <string name="Cod">Código do produto</string>
    <string name="btnDeleteCod">Excluir pelo código de barra</string>
    <string name="nav_editCod">Altera produto pelo código</string>
    <string name="modDark">Modo escuro</string>
    <string name="alterarNm">Alterar nome</string>
    <string name="nm">Digite o nome</string>
    <string name="save">Salvar alterações</string>
    <string name="alterarfone">Alterar Telefone</string>
    <string name="fn">Digite o telefone</string>
    <string name="nmant">Digite o nome antigo</string>

    <string-array name="planets_array">
        <item>Alfabética </item>
        <item>Menor para maior peço</item>
        <item>Maior para menorpeço</item>
    </string-array>

</resources>
