<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:orderInCategory="100"
        android:title="@string/action_config"
        app:showAsAction="always" />
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="@string/TXTNOME"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/nav_contact"
        android:title="@string/nav_agenda"
        android:icon="@drawable/ic_baselinecontacts_24"
        app:showAsAction="always" />
    <item
        android:id="@+id/nav_insert"
        android:icon="@drawable/ic_add_black_24dp"
        android:title="Inserir"
        app:showAsAction="always" />



</menu>