<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="?attr/backgroundcolor"
    android:layout_height="match_parent"
    tools:context=".Activity.AccountActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        app:cardBackgroundColor="?attr/cardBackgroundColor">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/textcolor"
            android:gravity="center"
            android:layout_marginRight="5dp"
            android:text="@string/alterarNm"/>

        <EditText
            android:id="@+id/editNomeAnt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="18dp"
            android:hint="@string/nmant"
            android:textColor="?attr/textcolor"
            android:textColorHint="?attr/textcolor"
            android:drawableLeft="@drawable/ic_account"/>

        <EditText
            android:id="@+id/editNomeNew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="65dp"
            android:hint="@string/nm"
            android:textColor="?attr/textcolor"
            android:textColorHint="?attr/textcolor"
            android:drawableLeft="@drawable/ic_account"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="125dp"
        app:cardBackgroundColor="?attr/cardBackgroundColor">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/textcolor"
            android:gravity="center"
            android:layout_marginRight="5dp"
            android:text="@string/alterarfone"/>

        <EditText
            android:id="@+id/editPhoneNew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="18dp"
            android:hint="@string/fn"
            android:textColor="?attr/textcolor"
            android:textColorHint="?attr/textcolor"
            android:drawableLeft="@drawable/ic_account"/>

    </androidx.cardview.widget.CardView>


    <Switch
        android:id="@+id/switchDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="195dp"
        android:layout_marginRight="15dp"
        android:text="@string/modDark"
        android:textColor="?attr/textcolor" />

    <Button
        android:id="@+id/btnsave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="650dp"
        android:layout_marginRight="32dp"
        android:background="?attr/buttoncolor"
        android:onClick="onClick"
        android:padding="0dp"
        android:text="@string/save" />
</RelativeLayout>