<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/cor_de_fundo"
    android:layout_height="match_parent"
    tools:context=".InsertActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TitleCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:text="@string/Title_Cadastro"
            android:textSize="24sp"
            android:layout_marginTop="150dp"
            android:textColor="#fff"
            tools:text="@string/Title_Cadastro" />

        <EditText
            android:id="@+id/editNmProduto"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="25dp"
            android:background="@color/fundo_edt"
            android:ems="10"
            android:hint="@string/CampoProduto"
            android:inputType="textPersonName"
            android:text=""
            android:textColor="#fff"
            android:maxLength="40"
            android:textColorHint="@color/fundo_menu" />

        <EditText
            android:id="@+id/editQtd"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="15dp"
            android:background="@color/fundo_edt"
            android:ems="10"
            android:hint="@string/EditQTD"
            android:inputType="number"
            android:maxLength="8"
            android:textColor="#fff"
            android:textColorHint="@color/fundo_menu" />

        <EditText
            android:id="@+id/editdtCompra"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="15dp"
            android:background="@color/fundo_edt"
            android:ems="10"
            android:hint="@string/EditdtCompra"
            android:inputType="date"
            android:textColor="#fff"
            android:maxLength="8"
            android:textColorHint="@color/fundo_menu"/>

        <EditText
            android:id="@+id/editVlCusto"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="15dp"
            android:background="@color/fundo_edt"
            android:ems="10"
            android:hint="@string/EditVlCusT"
            android:inputType="number"
            android:maxLength="10"
            android:textColor="#fff"
            android:textColorHint="@color/fundo_menu" />

        <EditText
            android:id="@+id/editVlVenda"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="15dp"
            android:background="@color/fundo_edt"
            android:ems="10"
            android:hint="@string/EditVLVenda"
            android:inputType="number"
            android:textColor="#fff"
            android:maxLength="10"
            android:textColorHint="@color/fundo_menu" />

        <EditText
            android:id="@+id/editDesc"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="15dp"
            android:background="@color/fundo_edt"
            android:ems="10"
            android:maxLength="50"
            android:hint="@string/EditDescricao"
            android:inputType="textPersonName"
            android:text=""
            android:textColor="#fff"
            android:textColorHint="@color/fundo_menu" />

        <Button
            android:id="@+id/btnProd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/btn_cust"
            android:onClick="onClick"
            android:text="Registrar Produto" />

        <TextView
            android:id="@+id/txtCancelar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:gravity="right"

            android:onClick="onClick"
            android:text="@string/nav_Voltar"
            android:textColor="#fff"
            android:textSize="18dp" />


    </LinearLayout>
</LinearLayout>