<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/cor_de_fundo"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="50dp"

        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="-50dp"
        android:text="@string/lblReset"
        android:textColor="#E8E8E8"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editResetEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:hint="@string/ItmeEmAIL"
        android:ems="10"
        android:inputType="textPersonName"
         />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="55dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/btn_cust"
        android:text="@string/btnEnviar" />



</LinearLayout>